--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: tz
+name: Update Timezones
 
 on:
   schedule:
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm install moment-timezone
 
-      - name: Generate tz data
-        run: node tz.js
+      - name: Generate timezone data
+        run: node generateTimezones.js
 
       - name: Commit and push changes
         run: |
