--- a/.github/workflows/tz.yml
+++ b/.github/workflows/tz.yml
@@ -30,4 +30,4 @@ jobs:
           git config --local user.email "github-actions@github.com"
           git add timezones.json
           git commit -m "Update timezone data" || echo "No changes to commit"
-          git push "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main"
+          git push "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:main
