--- a/.github/workflows/tz.yml
+++ b/.github/workflows/tz.yml
@@ -26,8 +26,14 @@ jobs:
 
       - name: Commit and push changes
         run: |
+                - name: Commit and push changes
+        run: |
           git config --local user.name "github-actions"
           git config --local user.email "github-actions@github.com"
-          git add timezones.json
-          git commit -m "Update timezone data" || echo "No changes to commit"
-          git push "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:main
+          if [[ `git status --porcelain` ]]; then
+            git add timezones.json
+            git commit -m "Update timezone data"
+            git push "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:main
+          else
+            echo "No changes to commit"
+          fi
